// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`snippet: #0 - {"bracketSpacing":false} format 1`] = `
====================================options=====================================
bracketSpacing: false
parsers: ["mdx"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<C   {...   props} />
=====================================output=====================================
<C {...props} />

================================================================================
`;

exports[`snippet: #0 - {"bracketSpacing":true} format 1`] = `
====================================options=====================================
bracketSpacing: true
parsers: ["mdx"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<C   {...   props} />
=====================================output=====================================
<C {...props} />

================================================================================
`;

exports[`snippet: #0 - {"embeddedLanguageFormatting":"off"} format 1`] = `
====================================options=====================================
embeddedLanguageFormatting: "off"
parsers: ["mdx"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<C   {...   props} />
=====================================output=====================================
<C {...   props} />

================================================================================
`;

exports[`snippet: #0 - {"semi":false} format 1`] = `
====================================options=====================================
parsers: ["mdx"]
semi: false
                                                      printWidth: 80 (default) |
=====================================input======================================
<C   {...   props} />
=====================================output=====================================
<C {...props} />

================================================================================
`;

exports[`snippet: #0 - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["mdx"]
trailingComma: "all"
                                                      printWidth: 80 (default) |
=====================================input======================================
<C   {...   long_long_long_long_long_long_long_call(   with_long_long_long_long_long_argument)} />
=====================================output=====================================
<C
  {...long_long_long_long_long_long_long_call(
    with_long_long_long_long_long_argument,
  )}
/>

================================================================================
`;
